--- a/JDS-ManagementApp/Procfile
+++ b/JDS-ManagementApp/Procfile
@@ -1,1 +1,1 @@
-web: java $JAVA_OPTS -jar target/dependency/webapp-runner.jar --port $PORT target/*.war
+web: java $JAVA_OPTS -jar JDS-ManagementApp/target/dependency/webapp-runner.jar --port $PORT JDS-ManagementApp/target/*.war
