--- a/JDS-ManagementApp/src/main/webapp/WEB-INF/web.xml
+++ b/JDS-ManagementApp/src/main/webapp/WEB-INF/web.xml
@@ -1,27 +1,35 @@
 
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" 
-	 version="3.1" >
- <display-name>Archetype Created Web Application</display-name>
- <servlet>
-  <servlet-name>Dispatcher</servlet-name>
-  <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-  <load-on-startup>1</load-on-startup>
- </servlet>
- 
- <context-param>
-       <param-name>contextConfigLocation</param-name>
-       <param-value>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<display-name>Archetype Created Web Application</display-name>
+	<servlet>
+		<servlet-name>Dispatcher</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
           /WEB-INF/data-source-hiber-cfg.xml
-        </param-value>        
-   </context-param>  
-   
- <servlet-mapping>
-  <servlet-name>Dispatcher</servlet-name>
-  <url-pattern>/</url-pattern>
- </servlet-mapping>
- <welcome-file-list>
-  <welcome-file>/index.jsp</welcome-file>
- </welcome-file-list>
+        </param-value>
+	</context-param>
+
+	<servlet-mapping>
+		<servlet-name>Dispatcher</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>/index.jsp</welcome-file>
+	</welcome-file-list>
+	
+	<listener>
+       <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+   </listener>
 </web-app>
+
+
+
+    
+
