--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.21.redhat-3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
