--- a/JDS-ManagementApp/src/main/webapp/WEB-INF/web.xml
+++ b/JDS-ManagementApp/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
           /WEB-INF/data-source-hiber-cfg.xml
+          /WEB-INF/spring-security.xml
         </param-value>
 	</context-param>
 
@@ -23,10 +24,39 @@
 	<welcome-file-list>
 		<welcome-file>/index.jsp</welcome-file>
 	</welcome-file-list>
+ 
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	 
 	
 	<listener>
-       <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-   </listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 </web-app>
 
 
